Fix #1424: Dark mode footer color of scheme Mist

--- a/source/css/_schemes/Mist/_layout.styl
+++ b/source/css/_schemes/Mist/_layout.styl
@@ -48,8 +48,8 @@ hr {
 // Footer
 // --------------------------------------------------
 .footer {
-  background: $whitesmoke;
-  color: $grey-dim;
+  background: var(--content-bg-color);
+  color: var(--text-color);
   padding: 10px 0;
 }
 
